--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "//1": "describes your app and its dependencies",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-  "name": "oxford dictionay api",
+  "name": "oxford dictionray api",
   "version": "0.0.1",
   "description": "oxford dictionary api",
   "main": "server.js",
